Updated version checking to give a "not supported" warning on Server 2003.
--HG--
branch : beta

--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -218,10 +218,10 @@
   <data name="DisableUpdatesButton" xml:space="preserve">
     <value>Disable Updates</value>
   </data>
-	<data name="NoticeMessageTitle" xml:space="preserve">
+  <data name="NoticeMessageTitle" xml:space="preserve">
     <value>Notice</value>
   </data>
-	<data name="WinXPError" xml:space="preserve">
-    <value>Windows XP support is currently broken. It is not known if or when it will be fixed.</value>
+  <data name="UnsupportedOSError" xml:space="preserve">
+    <value>VidCoder is not supported on your operating system. Windows XP and Server 2003 no longer work. Please install VidCoder 1.4 or upgrade your operating system.</value>
   </data>
 </root>
