--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -609,4 +609,10 @@
   <data name="EncodeDetailsMenuItem" xml:space="preserve">
     <value>Encode Details</value>
   </data>
+	<data name="EncodingSettingsChangedMessage" xml:space="preserve">
+    <value>Encoding settings have changed since you last added an item to the queue. Do you want to apply the current encoding settings to all items in the queue?</value>
+  </data>
+	<data name="EncodingSettingsChangedTitle" xml:space="preserve">
+    <value>Settings have changed</value>
+  </data>
 </root>
