--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -224,4 +224,25 @@
   <data name="UnsupportedOSError" xml:space="preserve">
     <value>VidCoder is not supported on your operating system. Windows XP and Server 2003 no longer work. Please install VidCoder 1.4 or upgrade your operating system.</value>
   </data>
+	<data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
+    <value>System sleep imminent</value>
+  </data>
+	<data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
+    <value>Log off imminent</value>
+  </data>
+	<data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
+    <value>Shutdown imminent</value>
+  </data>
+	<data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
+    <value>The system will sleep in {0} seconds.</value>
+  </data>
+	<data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
+    <value>You will be logged off in {0} seconds.</value>
+  </data>
+	<data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
+    <value>The system will shut down in {0} seconds.</value>
+  </data>
+	<data name="EncodeCompleteWarning_Title" xml:space="preserve">
+    <value>Encoding has completed.</value>
+  </data>
 </root>
