Added the ability to override the output directory from the Queue Multiple Titles dialog.
--HG--
branch : beta

--- a/VidCoder/Resources/QueueTitlesRes.resx
+++ b/VidCoder/Resources/QueueTitlesRes.resx
@@ -153,4 +153,7 @@
   <data name="TitleFormat">
     <value xml:space="preserve">Title {0}</value>
   </data>
+	<data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Override directory:</value>
+  </data>
 </root>
