--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -475,7 +475,7 @@
     <value>Import Error</value>
   </data>
   <data name="PresetImportSuccessMessage" xml:space="preserve">
-    <value>Successfully imported preset {0}.</value>
+    <value>Successfully imported preset {0}</value>
   </data>
   <data name="PresetExportSuccessMessage" xml:space="preserve">
     <value>Successfully exported preset to {0}</value>
@@ -609,20 +609,20 @@
   <data name="EncodeDetailsMenuItem" xml:space="preserve">
     <value>Encode Details</value>
   </data>
-	<data name="EncodingSettingsChangedMessage" xml:space="preserve">
+  <data name="EncodingSettingsChangedMessage" xml:space="preserve">
     <value>Encoding settings have changed since you last added an item to the queue. Do you want to apply the current encoding settings to all items in the queue?</value>
   </data>
-	<data name="EncodingSettingsChangedTitle" xml:space="preserve">
+  <data name="EncodingSettingsChangedTitle" xml:space="preserve">
     <value>Settings have changed</value>
   </data>
-	<data name="RenameDatabaseFileLine2" xml:space="preserve">
+  <data name="RenameDatabaseFileLine2" xml:space="preserve">
     <value>Do you want to rename the existing file and start with a new one?</value>
   </data>
-	<data name="RenameDatabaseFileLine1" xml:space="preserve">
+  <data name="RenameDatabaseFileLine1" xml:space="preserve">
     <value>Cannot read version {0} database file. The highest version recognized by VidCoder {1} is {2}</value>
     <comment>{0} is the version of the incompatible database file. {1} is the current version of VidCoder. {2} is the highest database version that is supported.</comment>
   </data>
-	<data name="IncompatibleDatabaseFileTitle" xml:space="preserve">
+  <data name="IncompatibleDatabaseFileTitle" xml:space="preserve">
     <value>Incompatible database file</value>
     <comment>Dialog title for a message explaining that the current database file is unsupported.</comment>
   </data>
