--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -154,14 +154,35 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Slower</value>
   </data>
-  <data name="Denoise_Medium" xml:space="preserve">
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Light</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
     <value>Medium</value>
   </data>
-  <data name="Denoise_Strong" xml:space="preserve">
+  <data name="DenoisePreset_Strong" xml:space="preserve">
     <value>Strong</value>
   </data>
-  <data name="Denoise_Weak" xml:space="preserve">
-    <value>Weak</value>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Ultralight</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animation</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Grain</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>High Motion</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
   </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Do nothing</value>
