--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -245,4 +245,10 @@
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
     <value>Encoding has completed.</value>
   </data>
+	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>Could not find video player for {0}.</value>
+  </data>
+	<data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Error playing source.</value>
+  </data>
 </root>
